--- a/flashcards/src/index.css
+++ b/flashcards/src/index.css
@@ -22,4 +22,35 @@
   height:500px;
   width:900px;
   size:contain; 
-  background-image:url(./assets/confettiFlashard.jpeg
+  background-image:url(./assets/confettiFlashard.jpeg);
+  background-repeat: no-repeat; 
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-display: flex;
+  align-content:center;
+  font-size: larger;
+}
+.flashcard:hover {
+  transform: scale(1.05);
+}
+
+.buttons {
+  margin-top: 20px;
+}
+
+button {
+  margin: 5px;
+  padding: 10px 20px;
+  border: none;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #45a049;
+}
