--- a/flashcards/src/flashcard.css
+++ b/flashcards/src/flashcard.css
@@ -1,8 +1,40 @@
-.flashcard{  
-    height:500px;
-    width:900px;
-    size:contain; 
-    background-image:url(./assets/confettiFlashard.jpeg);
-    background-repeat: no-repeat; 
-  }
-  
+.flashcard {
+  height: 500px;
+  width: 900px;
+  background-image: url(./assets/confettiFlashard.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: larger;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  position: relative;
+}
+
+.flashcard.flipped {
+  transform: rotateY(180deg);
+}
+
+.flashcard-front,
+.flashcard-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+}
+
+.flashcard-back {
+  transform: rotateY(180deg);
+  font-size: 30px;
+}
+
+
