--- a/flashcards/src/index.css
+++ b/flashcards/src/index.css
@@ -81,3 +81,13 @@ input{
   height: 45px;
   border-radius: 10px;
 }
+
+.correct {
+  border: 2px solid green;
+  background-color: #d4edda;
+}
+
+.wrong {
+  border: 2px solid red;
+  background-color: #f8d7da;
+}
